<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="352dp"
        android:layout_weight="1.31" >

        <RelativeLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/titleback" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="7dp"
                android:shadowColor="#a3c424"
                android:shadowRadius="5"
                android:text="@string/title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#a3c424" />

            <Button
                android:id="@+id/buttonLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="3dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/shutdown" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/linearLayout1"
            android:orientation="vertical" >

            <ViewFlipper
                android:id="@+id/viewFlipper1"
                android:layout_width="match_parent"
                android:layout_height="fill_parent" >
            </ViewFlipper>
        </LinearLayout>

    </RelativeLayout>

   
        <RelativeLayout
            android:id="@+id/relativeFooter"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_gravity="bottom"
            android:background="@drawable/titleback" >

            <Button
                android:id="@+id/buttonLog"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="#00000000"
                android:drawableTop="@drawable/terminal"
                android:gravity="center"
                android:paddingTop="6dp"
                android:text="@string/buttonlog"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/buttonText"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="#00000000"
                android:drawableTop="@drawable/notepad"
                android:gravity="center"
                android:paddingTop="6dp"
                android:text="@string/buttontext"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/buttonImage"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/buttonText"
                android:background="#00000000"
                android:drawableTop="@drawable/gimp"
                android:gravity="center"
                android:paddingTop="6dp"
                android:text="@string/buttonimage"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/buttonMusic"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/buttonLog"
                android:background="#00000000"
                android:drawableTop="@drawable/music"
                android:gravity="center"
                android:paddingTop="6dp"
                android:text="@string/musictitle"
                android:textColor="#FFFFFF" />

        </RelativeLayout>

    

</LinearLayout>